--- a/profile.yml
+++ b/profile.yml
@@ -4,11 +4,11 @@ case_study:
     dev:
       type: sqlite
       threads: 1
-      database: 'database'
+      database: 'data.sqlite'
       schema: 'main'
       schemas_and_paths:
-        main: 'file_path/database_name.db'
-      schema_directory: 'file_path'
+        main: '/Users/tamarakuzmich/case-analytics-engineer-FELD-M-1/data.sqlite/orders.db'
+      schema_directory: '/Users/tamarakuzmich/case-analytics-engineer-FELD-M-1/data.sqlite'
       #optional fields
       extensions:
         - "/path/to/sqlean/crypto.so"
